--- a/html-original/main.html
+++ b/html-original/main.html
@@ -61,7 +61,163 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="promo">
+        <div class="promo__container container">
+          <div class="promo__block">
+            <h1 class="promo__title">
+              Климат на пике технологического прогресса
+            </h1>
+            <a href="#" class="promo__more-link btn">Узнать больше</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="quality">
+        <div class="quality__container container">
+          <h2 class="quality__title section-title">
+            Японское качество с&nbsp;богатой историей
+          </h2>
+          <div class="quality__content">
+            <div class="quality__desc-block">
+              <div class="quality__tabs swiper">
+                <div class="quality__tabs-wrapper swiper-wrapper">
+                  <div
+                    class="quality__tab swiper-slide active"
+                    role="button"
+                    data-tab="quality-history"
+                  >
+                    История бренда
+                  </div>
+                  <div
+                    class="quality__tab swiper-slide"
+                    role="button"
+                    data-tab="quality-philosophy"
+                  >
+                    Философия
+                  </div>
+                  <div
+                    class="quality__tab swiper-slide"
+                    role="button"
+                    data-tab="quality-innovation"
+                  >
+                    Инновационные технологии
+                  </div>
+                </div>
+              </div>
+
+              <div
+                class="quality__tab-desc"
+                data-block="quality-history"
+                style="display: block"
+              >
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                  venenatis augue a dui sodales ultricies. Nam imperdiet a risus
+                  imperdiet varius. Sed neque lacus, fringilla ac enim nec,
+                  suscipit pulvinar tortor. Curabitur suscipit pulvinar augue ut
+                  ultricies. Maecenas quis massa non diam cursus bibendum.
+                  Mauris vitae tortor ut justo placerat pulvinar sed ac arcu.
+                  Suspendisse pharetra vitae purus quis bibendum. Praesent
+                  sapien erat, lobortis eu nibh nec, mollis imperdiet nulla.
+                </p>
+                <a href="#" class="quality__tab-link btn-arrow">
+                  Узнать больше
+                  <svg>
+                    <use xlink:href="img/sprite.svg#arrow-right"></use>
+                  </svg>
+                </a>
+              </div>
+
+              <div class="quality__tab-desc" data-block="quality-philosophy">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                  venenatis augue a dui sodales ultricies. Nam imperdiet a risus
+                  imperdiet varius. Sed neque lacus, fringilla ac enim nec,
+                  suscipit pulvinar tortor. Curabitur suscipit pulvinar augue ut
+                  ultricies. Maecenas quis massa non diam cursus bibendum.
+                  Mauris vitae tortor ut justo placerat pulvinar sed ac arcu.
+                  Suspendisse pharetra vitae purus quis bibendum.
+                </p>
+                <a href="#" class="quality__tab-link btn-arrow">
+                  Узнать больше
+                  <svg>
+                    <use xlink:href="img/sprite.svg#arrow-right"></use>
+                  </svg>
+                </a>
+              </div>
+
+              <div class="quality__tab-desc" data-block="quality-innovation">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                  venenatis augue a dui sodales ultricies. Nam imperdiet a risus
+                  imperdiet varius. Sed neque lacus, fringilla ac enim nec,
+                  suscipit pulvinar tortor. Curabitur suscipit pulvinar augue ut
+                  ultricies. Maecenas quis massa non diam cursus bibendum.
+                </p>
+                <a href="#" class="quality__tab-link btn-arrow">
+                  Узнать больше
+                  <svg>
+                    <use xlink:href="img/sprite.svg#arrow-right"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="quality__img-block">
+              <div
+                class="quality__img-item"
+                style="display: block"
+                data-img="quality-history"
+              >
+                <img src="img/quality-history.jpg" alt="История бренда" />
+              </div>
+
+              <div class="quality__img-item" data-img="quality-philosophy">
+                <img src="img/promo-bg.jpg" alt="История бренда" />
+              </div>
+
+              <div class="quality__img-item" data-img="quality-innovation">
+                <img src="img/quality-history.jpg" alt="История бренда" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="world-wide">
+        <div class="world-wide__container container">
+          <h2 class="world-wide__title section-title">
+            Бренд с присутствием по всему миру
+          </h2>
+          <div class="world-wide__content">
+            <div class="world-wide__main">
+              <b class="world-wide__slogan">
+                Kentatsu продаётся более чем в 20 странах
+              </b>
+              <a href="#" class="world-wide__buy-link btn-secondary">
+                Где купить?
+              </a>
+            </div>
+            <div class="world-wide__items">
+              <div class="world-wide__item half rus">
+                <h3 class="world-wide__item-title">Россия</h3>
+                <p class="world-wide__item-desc">
+                  Городская онкологическая больница №1
+                </p>
+              </div>
+              <div class="world-wide__item half kz">
+                <h3 class="world-wide__item-title">Казахстан</h3>
+                <p class="world-wide__item-desc">Личная резиденция Елбасы</p>
+              </div>
+              <div class="world-wide__item sa">
+                <h3 class="world-wide__item-title">Саудовская Аравия</h3>
+                <p class="world-wide__item-desc">Дворец шейха Аль-Сулима</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="footer__container container">
