--- a/source/main.html
+++ b/source/main.html
@@ -217,6 +217,96 @@
           </div>
         </div>
       </section>
+
+      <section class="assembly">
+        <div class="assembly__container container">
+          <h2 class="assembly__title section-title">
+            Сборка с японским подходом к&nbsp;производству
+          </h2>
+          <div class="assembly__img-block"></div>
+          <ul class="assembly__benefits">
+            <li class="assembly__benefit jap">
+              <h3 class="assembly__benefit-title">
+                Японский подход к&nbsp;производству
+              </h3>
+              <p class="assembly__benefit-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                odio risus, scelerisque ut mi sed, ullamcorper elementum metus.
+              </p>
+            </li>
+            <li class="assembly__benefit technology">
+              <h3 class="assembly__benefit-title">Передовые технологии</h3>
+              <p class="assembly__benefit-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                odio risus, scelerisque ut mi sed, ullamcorper elementum metus.
+              </p>
+            </li>
+            <li class="assembly__benefit eco">
+              <h3 class="assembly__benefit-title">Экологичное производство</h3>
+              <p class="assembly__benefit-desc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                odio risus, scelerisque ut mi sed, ullamcorper elementum metus.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="perfection">
+        <div class="perfection__container container">
+          <h2 class="perfection__title section-title">
+            Верх совершенства климатической техники
+          </h2>
+          <div class="perfection__content">
+            <div class="perfection__product rac">
+              <img
+                src="img/rac.png"
+                alt="Для жилых помещений"
+                class="perfection__product-img rac"
+              />
+              <h3 class="perfection__product-title">Для жилых помещений</h3>
+              <ul class="perfection__product-list">
+                <li class="perfection__product-list-item">
+                  Бытовые кондиционеры
+                </li>
+                <li class="perfection__product-list-item">Мультисистемы</li>
+                <li class="perfection__product-list-item">
+                  Отопительное оборудование
+                </li>
+              </ul>
+            </div>
+
+            <div class="perfection__product cac">
+              <img
+                src="img/cac.png"
+                alt="Для коммерческого применения"
+                class="perfection__product-img cac"
+              />
+              <h3 class="perfection__product-title">
+                Для коммерческого применения
+              </h3>
+              <ul class="perfection__product-list">
+                <li class="perfection__product-list-item">
+                  Коммерческие кондиционеры
+                </li>
+                <li class="perfection__product-list-item">
+                  Крышные кондиционеры
+                </li>
+                <li class="perfection__product-list-item">
+                  Многозональные системы (VRF)
+                </li>
+                <li class="perfection__product-list-item">Фанкойлы</li>
+                <li class="perfection__product-list-item">
+                  Гидравлические компоненты
+                </li>
+                <li class="perfection__product-list-item">
+                  Вентиляционные установки
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
