--- a/html-original/index.html
+++ b/html-original/index.html
@@ -16,6 +16,12 @@
             <b>main.html</b></a
           >
         </li>
+        <li>
+          <a href="about-brand.html"
+            >О бренде<br />
+            <b>about-brand.html</b></a
+          >
+        </li>
       </ul>
     </div>
 
