--- a/source/index.html
+++ b/source/index.html
@@ -16,10 +16,71 @@
             <b>main.html</b></a
           >
         </li>
+        <hr />
         <li>
           <a href="about-brand.html"
             >О бренде<br />
             <b>about-brand.html</b></a
+          >
+        </li>
+        <hr />
+        <li>
+          <a href="products.html"
+            >Продукты<br />
+            <b>products.html</b></a
+          >
+        </li>
+        <hr />
+        <li>
+          <a href="product-category-rac.html"
+            >Подкатегория продукта, бытовые кондиционеры<br />
+            <b>product-category-rac.html</b><br />
+            <h2>Требует уточнения:</h2>
+            <ul style="font-size: 20px">
+              <li style="margin-bottom: 10px">
+                <b>
+                  для других подкатегорий продуктов требуется уточнение картинок
+                  для промо-блока на странице!!!
+                </b>
+              </li>
+              <li style="margin-bottom: 10px">
+                <b>
+                  требуется уточнение, какого рода будут картинки в продуктовой
+                  линейке (png без фона со свойством contain, или фоновые
+                  картинки со свойством cover)
+                </b>
+              </li>
+            </ul>
+          </a>
+        </li>
+        <hr />
+        <li>
+          <a href="product-category-cac.html"
+            >Подкатегория продукта, VRF<br />
+            <b>product-category-cac.html</b><br />
+            <h2>Требует уточнения:</h2>
+            <ul style="font-size: 20px">
+              <li style="margin-bottom: 10px">
+                <b>
+                  для других подкатегорий продуктов требуется уточнение картинок
+                  для промо-блока на странице!!!
+                </b>
+              </li>
+              <li style="margin-bottom: 10px">
+                <b>
+                  требуется уточнение, какого рода будут картинки в продуктовой
+                  линейке (png без фона со свойством contain, или фоновые
+                  картинки со свойством cover)
+                </b>
+              </li>
+            </ul>
+          </a>
+        </li>
+        <hr />
+        <li>
+          <a href="product-series.html"
+            >Серия продукта<br />
+            <b>product-series.html</b></a
           >
         </li>
       </ul>
