--- a/source/about-brand.html
+++ b/source/about-brand.html
@@ -64,8 +64,10 @@
     <main>
       <div class="breadcrumbs">
         <div class="breadcrumbs__container container">
-          <a href="#" class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link">О бренде</a>
+          <div class="breadcrumbs__links">
+            <a href="#" class="breadcrumbs__link">Главная</a>
+            <a class="breadcrumbs__link">О бренде</a>
+          </div>
         </div>
       </div>
 
