--- a/source/product-series.html
+++ b/source/product-series.html
@@ -113,12 +113,40 @@
                 <div class="review__img-main-block">
                   <img src="" alt="" class="review__img-main" />
                 </div>
-                <div class="review__img-preview-block"></div>
+                <div class="review__img-preview-block">
+                  <div class="review__img-preview-slider swiper">
+                    <div class="review__img-preview-wrapper swiper-wrapper">
+                      <div
+                        class="review__img-preview-slide swiper-slide active"
+                      >
+                        <img
+                          src="img/assembly-bg.jpg"
+                          alt=""
+                          class="review__img-preview-img"
+                        />
+                      </div>
+                      <div class="review__img-preview-slide swiper-slide">
+                        <img
+                          src="img/history-bg.jpg"
+                          alt=""
+                          class="review__img-preview-img"
+                        />
+                      </div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                      <div class="review__img-preview-slide swiper-slide"></div>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="review__data">
                 <b class="review__data-slogan">
                   Современные технологии энергоэффективности, комфорта
-                  и&nbsp;заботы об окружающей среде.
+                  и&nbsp;заботы об&nbsp;окружающей среде.
                 </b>
                 <p class="review__data-desc">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
