--- a/source/main.html
+++ b/source/main.html
@@ -267,11 +267,13 @@
               <h3 class="perfection__product-title">Для жилых помещений</h3>
               <ul class="perfection__product-list">
                 <li class="perfection__product-list-item">
-                  Бытовые кондиционеры
+                  <a href="#">Бытовые кондиционеры</a>
                 </li>
-                <li class="perfection__product-list-item">Мультисистемы</li>
                 <li class="perfection__product-list-item">
-                  Отопительное оборудование
+                  <a href="#">Мультисистемы</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Отопительное оборудование</a>
                 </li>
               </ul>
             </div>
@@ -287,20 +289,22 @@
               </h3>
               <ul class="perfection__product-list">
                 <li class="perfection__product-list-item">
-                  Коммерческие кондиционеры
+                  <a href="#">Коммерческие кондиционеры</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Крышные кондиционеры
+                  <a href="#">Крышные кондиционеры</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Многозональные системы (VRF)
-                </li>
-                <li class="perfection__product-list-item">Фанкойлы</li>
-                <li class="perfection__product-list-item">
-                  Гидравлические компоненты
+                  <a href="#">Многозональные системы (VRF)</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Вентиляционные установки
+                  <a href="#">Фанкойлы</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Гидравлические компоненты</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Вентиляционные установки</a>
                 </li>
               </ul>
             </div>
