--- a/source/products.html
+++ b/source/products.html
@@ -80,7 +80,7 @@
       <section class="perfection">
         <div class="perfection__container container">
           <div class="perfection__content">
-            <a href="#" class="perfection__product rac">
+            <div class="perfection__product rac">
               <img
                 src="img/rac.png"
                 alt="Для жилых помещений"
@@ -89,16 +89,18 @@
               <h3 class="perfection__product-title">Для жилых помещений</h3>
               <ul class="perfection__product-list">
                 <li class="perfection__product-list-item">
-                  Бытовые кондиционеры
+                  <a href="#">Бытовые кондиционеры</a>
                 </li>
-                <li class="perfection__product-list-item">Мультисистемы</li>
                 <li class="perfection__product-list-item">
-                  Отопительное оборудование
+                  <a href="#">Мультисистемы</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Отопительное оборудование</a>
                 </li>
               </ul>
-            </a>
+            </div>
 
-            <a href="#" class="perfection__product cac">
+            <div class="perfection__product cac">
               <img
                 src="img/cac.png"
                 alt="Для коммерческого применения"
@@ -109,23 +111,25 @@
               </h3>
               <ul class="perfection__product-list">
                 <li class="perfection__product-list-item">
-                  Коммерческие кондиционеры
+                  <a href="#">Коммерческие кондиционеры</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Крышные кондиционеры
+                  <a href="#">Крышные кондиционеры</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Многозональные системы (VRF)
-                </li>
-                <li class="perfection__product-list-item">Фанкойлы</li>
-                <li class="perfection__product-list-item">
-                  Гидравлические компоненты
+                  <a href="#">Многозональные системы (VRF)</a>
                 </li>
                 <li class="perfection__product-list-item">
-                  Вентиляционные установки
+                  <a href="#">Фанкойлы</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Гидравлические компоненты</a>
+                </li>
+                <li class="perfection__product-list-item">
+                  <a href="#">Вентиляционные установки</a>
                 </li>
               </ul>
-            </a>
+            </div>
           </div>
         </div>
       </section>
