--- a/html-original/product-series.html
+++ b/html-original/product-series.html
@@ -192,6 +192,67 @@
                 </div>
               </div>
             </div>
+
+            <div class="category__benefits">
+              <h2 class="category__benefits-title section-title">
+                Особенности серии
+              </h2>
+              <ul class="category__benefits-list">
+                <li class="category__benefits-item">
+                  <img src="" alt="" class="category__benefit-img" />
+                  <h3 class="category__benefit-title">Individual Control</h3>
+                  <p class="category__benefit-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                    elementum metus.
+                  </p>
+                </li>
+                <li class="category__benefits-item">
+                  <img src="" alt="" class="category__benefit-img" />
+                  <h3 class="category__benefit-title">
+                    Energy and Cost Savings
+                  </h3>
+                  <p class="category__benefit-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                    elementum metus.
+                  </p>
+                </li>
+                <li class="category__benefits-item">
+                  <img src="" alt="" class="category__benefit-img" />
+                  <h3 class="category__benefit-title">Flexible Installation</h3>
+                  <p class="category__benefit-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                    elementum metus.
+                  </p>
+                </li>
+                <li class="category__benefits-item">
+                  <img src="" alt="" class="category__benefit-img" />
+                  <h3 class="category__benefit-title">
+                    Extensive Product Lineup
+                  </h3>
+                  <p class="category__benefit-desc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                    elementum metus.
+                  </p>
+                </li>
+              </ul>
+            </div>
+
+            <section class="philosophy__partnership buy">
+              <div class="philosophy__partnership-desc">
+                <b class="philosophy__partnership-slogan">
+                  Чтобы получить больше информации, обратитесь
+                  к&nbsp;дистрибьютору в&nbsp;вашем регионе
+                </b>
+                <a href="#" class="philosophy__partnership-link btn-secondary">
+                  Где купить
+                </a>
+              </div>
+              <div class="philosophy__partnership-img"></div>
+            </section>
           </div>
         </section>
       </div>
