--- a/source/product-series.html
+++ b/source/product-series.html
@@ -257,6 +257,8 @@
         </section>
       </div>
 
+      <div class="series__part" data-block="chars"></div>
+
       <section
         class="modal"
         id="modal-partnership"
