--- a/html-original/index.html
+++ b/html-original/index.html
@@ -83,6 +83,13 @@
             <b>product-series.html</b></a
           >
         </li>
+        <hr />
+        <li>
+          <a href="for-partners.html"
+            >Партнёрам<br />
+            <b>for-partners.html</b></a
+          >
+        </li>
       </ul>
     </div>
 
