--- a/source/index.html
+++ b/source/index.html
@@ -90,6 +90,13 @@
             <b>for-partners.html</b></a
           >
         </li>
+        <hr />
+        <li>
+          <a href="buy.html"
+            >Где купить<br />
+            <b>buy.html</b></a
+          >
+        </li>
       </ul>
     </div>
 
