--- a/html-original/for-partners copy.html
+++ b/html-original/for-partners copy.html
@@ -19,10 +19,10 @@
               <a href="#" class="header__nav-link">О бренде</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link active">Продукты</a>
+              <a href="#" class="header__nav-link">Продукты</a>
             </li>
             <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Партнёрам</a>
+              <a href="#" class="header__nav-link active">Партнёрам</a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link">Где купить?</a>
@@ -66,70 +66,125 @@
         <div class="breadcrumbs__container container">
           <div class="breadcrumbs__links">
             <a href="#" class="breadcrumbs__link">Главная</a>
-            <a class="breadcrumbs__link">Продукты</a>
+            <a class="breadcrumbs__link">Партнёрам</a>
           </div>
         </div>
       </div>
 
       <div class="main-title">
         <div class="main-title__container container">
-          <h1 class="main-title__title">Климатическая техника Kentatsu</h1>
+          <h1 class="main-title__title">Партнёрам</h1>
         </div>
       </div>
 
-      <section class="perfection">
-        <div class="perfection__container container">
-          <div class="perfection__content">
-            <div class="perfection__product rac">
-              <img
-                src="img/rac.png"
-                alt="Для жилых помещений"
-                class="perfection__product-img rac"
-              />
-              <h3 class="perfection__product-title">Для жилых помещений</h3>
-              <ul class="perfection__product-list">
-                <li class="perfection__product-list-item">
-                  <a href="#">Бытовые кондиционеры</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Мультисистемы</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Отопительное оборудование</a>
-                </li>
-              </ul>
-            </div>
+      <section class="for-partners">
+        <div class="for-partners__container container">
+          <div class="for-partners__promo">
+            <h2 class="for-partners__promo-title">
+              Хорошие друзья достаются тому, кто сам умеет быть хорошим другом
+            </h2>
+            <a href="#" class="for-partners__partnership btn">
+              Стать партнёром
+            </a>
+          </div>
 
-            <div class="perfection__product cac">
-              <img
-                src="img/cac.png"
-                alt="Для коммерческого применения"
-                class="perfection__product-img cac"
-              />
-              <h3 class="perfection__product-title">
-                Для коммерческого применения
-              </h3>
-              <ul class="perfection__product-list">
-                <li class="perfection__product-list-item">
-                  <a href="#">Коммерческие кондиционеры</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Крышные кондиционеры</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Многозональные системы (VRF)</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Фанкойлы</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Гидравлические компоненты</a>
-                </li>
-                <li class="perfection__product-list-item">
-                  <a href="#">Вентиляционные установки</a>
-                </li>
-              </ul>
+          <div class="for-partners__statistics">
+            <div class="for-partners__statistics-item">
+              <p class="for-partners__statistics-value">13</p>
+              <p class="for-partners__statistics-desc">
+                Торговых представительств
+              </p>
             </div>
+            <div class="for-partners__statistics-item">
+              <p class="for-partners__statistics-value">46</p>
+              <p class="for-partners__statistics-desc">Дилеров по всему миру</p>
+            </div>
+            <div class="for-partners__statistics-item">
+              <p class="for-partners__statistics-value">1300</p>
+              <p class="for-partners__statistics-desc">
+                Сотрудников на производстве и&nbsp;в&nbsp;офисах
+              </p>
+            </div>
+            <div class="for-partners__statistics-item">
+              <p class="for-partners__statistics-value">50 000</p>
+              <p class="for-partners__statistics-desc">
+                Единиц техники в&nbsp;год выпускают наши производства
+              </p>
+            </div>
+          </div>
+
+          <div class="for-partners__advantages">
+            <h3 class="section-title">
+              Что вы получите, став нашим партнёром?
+            </h3>
+            <div class="for-partners__advantages-img"></div>
+            <ul class="for-partners__advantages-list">
+              <li class="for-partners__advantages-item">
+                <img src="" alt="" class="for-partners__advantages-item-img" />
+                <h4 class="for-partners__advantages-item-title">
+                  Японский конкурентоспособный бренд
+                </h4>
+                <p class="for-partners__advantages-item-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                  elementum metus.
+                </p>
+              </li>
+              <li class="for-partners__advantages-item">
+                <img src="" alt="" class="for-partners__advantages-item-img" />
+                <h4 class="for-partners__advantages-item-title">
+                  Высокий доход
+                </h4>
+                <p class="for-partners__advantages-item-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                  elementum metus.
+                </p>
+              </li>
+              <li class="for-partners__advantages-item">
+                <img src="" alt="" class="for-partners__advantages-item-img" />
+                <h4 class="for-partners__advantages-item-title">
+                  Программа поддержки
+                </h4>
+                <p class="for-partners__advantages-item-desc">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus odio risus, scelerisque ut mi sed, ullamcorper
+                  elementum metus.
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="for-partners__profit">
+            <h3 class="section-title">
+              Kentatsu — бренд с ежегодно растущей прибылью
+            </h3>
+            <p class="for-partners__profit-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+              venenatis augue a dui sodales ultricies. Nam imperdiet a risus
+              imperdiet varius. Sed neque lacus, fringilla ac enim nec, suscipit
+              pulvinar tortor. Curabitur suscipit pulvinar augue ut ultricies.
+              Maecenas quis massa non diam cursus bibendum. Mauris vitae tortor
+              ut justo placerat pulvinar sed ac arcu. Suspendisse pharetra vitae
+              purus quis bibendum. Praesent sapien erat, lobortis eu nibh nec,
+              mollis imperdiet nulla.
+            </p>
+            <div class="for-partners__profit-img"></div>
+          </div>
+
+          <div class="for-partners__together">
+            <h3 class="for-partners__together-title">
+              Будьте на волне прогресса вместе с Kentatsu
+            </h3>
+            <p class="for-partners__together-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+              venenatis augue a dui sodales ultricies. Nam imperdiet a risus
+              imperdiet varius. Sed neque lacus, fringilla ac enim nec, suscipit
+              pulvinar tortor.
+            </p>
+            <a href="#" class="for-partners__together-link btn">
+              Стать партнёром
+            </a>
           </div>
         </div>
       </section>
