--- a/source/main.html
+++ b/source/main.html
@@ -328,13 +328,23 @@
                   <a href="#" class="footer__nav-link main">О бренде</a>
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="footer__nav-link">История</a>
+                  <a href="about-brand.html" class="footer__nav-link"
+                    >История</a
+                  >
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="footer__nav-link">Философия</a>
+                  <a
+                    href="about-brand.html?tab=philosophy"
+                    class="footer__nav-link"
+                    >Философия</a
+                  >
                 </li>
                 <li class="footer__nav-item">
-                  <a href="#" class="footer__nav-link">Технологии</a>
+                  <a
+                    href="about-brand.html?tab=innovation"
+                    class="footer__nav-link"
+                    >Технологии</a
+                  >
                 </li>
               </ul>
             </div>
