--- a/html-original/index.html
+++ b/html-original/index.html
@@ -97,6 +97,20 @@
             <b>buy.html</b></a
           >
         </li>
+        <hr />
+        <li>
+          <a href="contacts.html"
+            >Контакты<br />
+            <b>contacts.html</b></a
+          >
+        </li>
+        <hr />
+        <li>
+          <a href="select-region.html"
+            >Выбор региона<br />
+            <b>select-region.html</b></a
+          >
+        </li>
       </ul>
     </div>
 
